setup file upload endpoint with Minio integration and database schema

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -10,3 +10,10 @@ database:
 
 secret:
   jwt_secret: "secret"
+
+minio:
+  endpoint: "localhost:9000"
+  access_key_id: "minioadmin"
+  secret_access_key: "minioadmin"
+  use_ssl: false
+  bucket: "fitbyte"
