--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,17 @@ services:
     volumes:
       - fitByte_data:/var/lib/postgresql/data
 
+  minio:
+    image: minio/minio:latest
+    container_name: go-minio
+    restart: always
+    ports:
+      - "9000:9000"
+      - "9090:9090"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    command: server --console-address ":9090" /data
+
 volumes:
   fitByte_data:
