--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   postgres:
-    image: postgres:15
+    image: postgres:15-alpine
     container_name: fitByte-postgres
     environment:
       POSTGRES_DB: fitByte
